syntax = "proto3";

package product;

// Category message representing a product category
message Category_Proto {
  string name = 1;  // Name of the category
  string description = 2;  // Description of the category

  repeated Product_Proto products = 3;  // One-to-many relationship: one category has multiple products
}

// Product message representing a product
message Product_Proto {
  string name = 1;  // Name of the product
  string description = 2;  // Description of the product, optional
  float price = 3;  // Price of the product
  bool available = 4;  // Availability of the product
  int32 category_id = 5;  // Foreign key to Category
  string brand = 6; 
  float weight = 7; 
  string sku = 8;
   // RelationShip
  Category_Proto category = 9;  // One-to-one relationship: product belongs to a category 
  repeated Review_Proto reviews = 10;  // One-to-many relationship: product has multiple reviews
  repeated Rating_Proto ratings = 11;  // One-to-many relationship: product has multiple ratings
}

// Review message representing a product review
message Review_Proto {
  string review_text = 1;  // Text of the review
  int32 product_id = 2;  // Foreign key to Product
   // RelationShip
  Product_Proto product = 3;  // One-to-one relationship: review belongs to a product
}

// Rating message representing a product rating
message Rating_Proto {
  int32 rating = 1;  // Rating value
  int32 product_id = 2;  // Foreign key to Product
   // RelationShip
  Product_Proto product = 3;  // One-to-one relationship: rating belongs to a product
}
